--- a/app/src/main/res/layout/activity_bmi_calc.xml
+++ b/app/src/main/res/layout/activity_bmi_calc.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:textSize="24dp"
-        android:text="BMI Calculator " />
+        android:text="Body Mass Index Calculator " />
 
 
     <TextView
